--- a/senior/package.json
+++ b/senior/package.json
@@ -12,11 +12,15 @@
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
+    "node-localstorage": "^2.2.1",
     "nodemon": "^2.0.22",
+    "qibla": "^1.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
